fix: fix homepage styling on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -53,3 +53,10 @@ h2 {
 #account-dropdown * {
   color: var(--colour-black);
 }
+
+@media screen {
+  
+}
+.fa-user, .fa-shopping-bag {
+
+}
